# Noteview

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: ci.yml
app/: README.md  index.html  package-lock.json  package.json
app/scripts/: smoke-ui.mjs  smoke.mjs
app/src/: App.tsx  commands.ts  main.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: ConfirmModal.tsx  EditorHost.tsx  FindReplace.tsx  GoTo.tsx  MenuBar.tsx  Modal.tsx  Settings.tsx  StatusBar.tsx  TabBar.tsx  Toast.tsx  Toolbar.tsx
app/src/components/editors/: MarkdownEditor.tsx  PlainEditor.tsx  RichEditor.tsx
app/src/components/editors/extensions/: math.ts
app/src/i18n/: ar.json  en.json  index.ts
app/src/lib/: bidi.ts  convert.ts  export.ts  files.ts  search.ts  tauri.ts
app/src/state/: editorBridge.ts  richEditor.ts  store.ts  ui.ts
app/src/styles/: app.css  base.css  editor.css  fonts.css  tokens.css
scripts/: release.ps1
